--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -137,7 +137,7 @@
     <string name="qmyo_wx">迈界微信公众号： qmyoclub</string>
     <string name="qmyo_net">迈界官网：<Data><![CDATA[<font color="#9DC14F">www.qmyo.com</font>]]></Data></string>
     <string name="qmyo_jianjie">迈界简介</string>
-    <string name="feedback_desc">欢迎你提出宝贵的意见与建议，收到您的反馈以后，我们将尽快3-7个工作日内回复您，届时请您查看“我的”信息信箱</string>
+    <string name="feedback_desc">欢迎你提出宝贵的意见与建议，收到您的反馈以后，我们将尽快3-7个工作日内回复您，届时请您查看“我的”信息信箱(500字以内)</string>
     <string name="hd_feedback">活动反馈</string>
     <string name="sh_feedback">商户反馈</string>
     <string name="yhk_feedback">银行卡问题反馈</string>
@@ -295,9 +295,9 @@
     <string name="experience">体验</string>
     <string name="current">当前</string>
     <string name="send">发送</string>
-    <string name="search_card_tip2_1">如果您暂时想选择自己的银行卡</string>
+    <string name="search_card_tip2_1">如果您暂时不想选择自己的银行卡</string>
      <string name="search_card_tip2_2">也可以先行体验迈界为您推荐的银行卡哟</string>
-    <string name="experience_jump_now">先行体验</string>
+    <string name="experience_jump_now">体验迈界推荐卡</string>
     <string name="jiwen_about">共有%1$s篇文章与<Data><![CDATA[<font color="#9DC14F">%2$s</font>]]></Data>有关</string>
     <string name="look_now">立即查看</string>
     <string name="search_tip">搜索并添加您所拥有的银行卡\n让迈界更好地为您服务</string>
