guzman.geng 2015-10-31 加入各大板块从登录页跳转回来的数据判断

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -239,6 +239,7 @@
     <string name="v16_jiwen">V16极文</string>
     <string name="bangdan">榜单</string>
     <string name="yuanchuang">原创</string>
+    <string name="ask_question">您或许想要询问以下问题</string>
     <string name="secretary_tip">%1$s，请选择一个类别事项，让我快速帮您解决吧</string>
     <string name="new_shopping">新品购物</string>
     <string name="shengyan_part">盛宴狂欢</string>
