Yeun.zhang 2016-01-04 版本 1.2.13
提交内容涉及：版本更新和统计接口替换、小秘书多条回复对外接口测试正常

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="mine">我的</string>
     <string name="content_is_loading">内容正在加载...</string>
     <string name="shopping_carnival">购物狂欢</string>
-    <string name="travel_holiday">旅游度假</string>
+    <string name="travel_holiday">旅行度假</string>
     <string name="dining">美食餐饮</string>
     <string name="courtesy_car">汽车礼遇</string>
     <string name="life_service">生活服务</string>
@@ -70,13 +70,18 @@
     <string name="tx_wb">腾讯微博</string>
     <string name="xl_wb">新浪微博</string>
     <string name="rapley_counts">回复(%1$s)</string>
+    <string name="rapley_counts1">全部回复(%1$s)</string>
     <string name="tele_address">地址：%1$s</string>
     <string name="images_count">共%1$s张</string>
     <string name="tele_address2">办公地址：%1$s</string>
     <string name="telephone"><Data><![CDATA[<font color="#6F6F6F">联系电话： </font>%1$s]]></Data></string>
     <string name="telephone_nothave_now"><Data><![CDATA[<font color="#6F6F6F">联系电话：%1$s </font>]]></Data></string>
+    
+    <string name="all_desc"><Data>回复<![CDATA[<font color="#9DC14F">@%1$s </font>:%2$s]]></Data></string>
+    
     <string name="telephone2"><Data><![CDATA[<font color="#6F6F6F">电话: </font>%1$s]]></Data></string>
     <string name="reply_green"><Data><![CDATA[<font color="#9DC14F"> 回复 </font>]]></Data></string>
+    <string name="reply_desc"><Data><![CDATA[<font color="#9DC14F"> @%1$s </font>]]></Data></string>
     <string name="all_store">查看所有分店</string>
     <string name="xy_card">银行卡</string>
     <string name="yhq">优惠券</string>
@@ -137,7 +142,7 @@
     <string name="income">收入</string>
     <string name="edit_person_info">完善个人信息</string>
     <string name="exit_login">退出登录</string>
-    <string name="replay">回复</string>
+    <string name="replay">回复@</string>
     <string name="store">门店</string>
     <string name="qmyo_version">迈界 V</string>
     <string name="qmyo_desc">收集世界各地惊喜\n伴随迈友走遍世界</string>
@@ -346,7 +351,7 @@
     <string name="up_dataing">上传数据中...</string>
     <string name="go_look">去看看吧</string>
     <string name="max_photos">最多9张图片，请确认！！！</string>
-    <string name="common_problem">帮助中心</string>
+    <string name="common_problem">常见问题</string>
     <string name="user_agreement">用户协议</string>
     <string name="v16">V16</string>
     <string name="please_enter_card">搜索/添加银行卡</string>
@@ -357,22 +362,85 @@
     <string name="edit_address">完善地址</string>
 
     <string-array name="help_title">
-        <item>一、账号信息</item>
-        <item>二、银行卡添加</item>
-        <item>三、惊喜相关</item>
-        <item>四、私人秘书使用说明</item>
-        <item>五、评价类</item>
-        <item>六、想跟我们聊聊？</item>
+        <item>一、银行卡添加</item>
+        <item>二、惊喜活动</item>
+        <item>三、私人秘书使用说明</item>
+        <item>四、账号信息</item>
+        <item>五、意见反馈</item>
+        <!-- <item>六、迈界迈友协议（迈友协议正文）</item> -->
     </string-array>
     <string-array name="help_q_a">
-        <item><Data><![CDATA[<font color="#9DC14F">Q1: 不注册是否可以找到惊喜？</font><br>]]></Data>A：当然可以，哗哗滴惊喜等着你挖掘。在你开启迈界APP以后，输入银行卡的界面下面有体验键，你可以通过点击通过迈界随机选择的卡探索迈界的惊喜世界。<Data><![CDATA[<br><br><font color="#9DC14F">Q2： 我可以忽略个人信息中心那些要填的资料吗？</font><br>]]></Data>A：完全可以。不过如果完整的填写并且提交那些个人资料，有更多的惊喜将会源源不绝的找上你哦！例如免费吃吃米其林或者国际新品的优先试用等等。</item>
-        <item><Data><![CDATA[<font color="#9DC14F">Q1：你们把整个银行的所有活动都搬来了吗？ </font><br>]]></Data>\nA：基本上只要是卡库里有的各大银行卡，你都可以进行添加和关注活动。当然有些银行卡的活动是需要到现场通过消费相应的卡参与活动的，请你注意相关的活动规则。\n<Data><![CDATA[<br><br><font color="#9DC14F">Q2：为哈隔壁小红有那个活动但是我没有呢？ </font><br>]]></Data>\n
-A：这种情况的发生是因为你加的关注的银行卡与别人不一样所导致。\n<Data><![CDATA[<br><br><font color="#9DC14F">Q3：兜儿里的卡还有那些活动都在哪里查看啊？ </font><br>]]></Data>\n
-A：你可以在首页的右上角点击查看你的卡包或者通过点击“我的”里面的银行卡进行查看。在你登陆迈界APP以后，你可以通过右上角的加卡按钮进行添加常用银行卡，然后点击底栏“活动”即可查看你添加所有银行卡当时有效的活动，并且通过LBS定位，你说看到的活动会根据地理位置由近至远为你展示。</item>
-        <item><Data><![CDATA[<font color="#9DC14F">Q1： 啥是惊喜？ </font><br>]]></Data>A：就是又惊又喜！迈界通过自身强大的渠道资源，汇集全球各地高品质服务商的活动。迈界的所有惊喜将会让你的音量从正常瞬间提高十倍！<Data><![CDATA[<br><br><font color="#9DC14F">Q2：如何搜索一个活动？</font><br>]]></Data>A：你可以通过在搜索栏搜索活动的关键词，或者通过分类的筛选来找到符合你需求的活动。<Data><![CDATA[<br><br><font color="#9DC14F">Q3：为啥我找不到XX店？ </font><br>]]></Data>A：有几种可能。第一，你所找的商户目前没有活动或者尚未上传活动；第二，你所找的商户暂时不符合迈界对于商户制定的上线标准；第三，你所找的商户因为违规操作被录入黑名单；第四，你的定位可能不在该商户所在城市。如非以上情况，你可以通过意见反馈（链接）与我们联系。<Data><![CDATA[<br><br><font color="#9DC14F">Q4： 我最喜欢XX家了，怎么才能及时收到他们的消息呢？ </font><br>]]></Data>A：首先选择你最喜欢的那XX家，然后在门店详情页右上角点击关注，并且选择是否接收该门店的消息。之后你可以在你的个人中心自动收到该门店活动的信息，帮助你随时收到该店的惊喜。<Data><![CDATA[<br><br><font color="#9DC14F">Q5：如果商户脑袋被门夹了，欺骗消费者咋办？</font><br>]]></Data>A：别担心！我们立马叫人！（开玩笑）我们都是斯文人，还是要冷静的处理。你可以通过活动举报或者评论投诉，对该商户进行投诉，若商户在3天内不予以回应或者该事情最终没有解决得当，你可以对我们进行反馈。迈界始终作为第三方监督立场帮助商户与迈友进行双方的行为监督，在核查为事实以后，咱肯定得召唤个容嬷嬷来处理。</item>
-        <item><Data><![CDATA[<font color="#9DC14F">Q1：什么是私人秘书？</font><br>A：迈界的“私人秘书”通过将迈友的需求与优质服务商的连接和匹配，在最短时间内根据迈友的需求，帮助迈友解决信息筛选、优质服务商挑选与需求匹配为主等一系列以往只有在社会精英阶层才能享受的服务。帮助迈友充分利用碎片化时间解决自己生活上的需求与节省时间、金钱等，将他们最需要的惊喜和幸运直接送至面前。<br><br><font color="#9DC14F">Q2：怎么使用？</font><br>A：神简单！首先迈友需要从左侧的栏目中挑选问题类型，根据问题类型填写相应的表单，48小时内可以在APP“我的”消息箱里查看相关的回复。<br><br><font color="#9DC14F">Q3：使用私人秘书有什么好处？</font><br>A：迈界的私人秘书能够根据你的需求，在信息爆炸的时代，以最快的效率帮助你进行需求匹配，为你提供最合适的优质信息或者服务商渠道，帮助你利用碎片化时间解决日常生活中的重要需求，为你带来生活中的惊喜。<br><br><font color="#9DC14F">Q4：私人秘书如何匹配我的需求与信息？</font><br>A：你可以根据需求进行提问，当然当你的需求描述的越清楚的时候，私人秘书的回复将会越贴合你的需求点。例如在旅游度假版块：如果你咨询：“我打算去泰国3-4天，帮忙安排一下线路”或者“我打算在4月去泰国曼谷3-4天，帮忙安排一下线路”。前者的回答将会为客户推荐泰国最佳出行月份里面，最佳和最热门的旅游地点的线路；后者的回答将会为客户在路线安排里加入4月曼谷最佳体验活动，尽可能贴近客户的需求。<br><br><font color="#9DC14F">Q5：你们都不睡觉的吗？啥时候都能找你们唠唠嗑？</font><br>A：我们有固定的工作时间，7天<br><br><font color="#9DC14F">Q6：私人秘书的总部在哪里？</font><br>A：总部在一个你肯定想不到的地方。因为那里汇聚了最优质的服务群体，因此我们为你提高最高智慧的回复。<br><br><font color="#9DC14F">Q7：私人秘书是付费项目吗？</font><br>A：信息类完全免费。如果你需要选择精英专享定制服务，私人秘书团队需要收取一定的服务费用。<br><br><font color="#9DC14F">Q8：在这里可以询问关于系统的问题吗？</font><br>A：如果需要反馈关于商户、门店等与APP相关的问题，你可以到“我的”——设置——意见反馈里面提意见。]]></Data></item>
-        <item><![CDATA[<font color="#9DC14F">Q1：我对这个商户的服务态度十分不爽，怎么发评价？</font><br>A：你可以在消费后再门店下面进行活动的评价与评论<br><br><font color="#9DC14F">Q2：之前好像是我误会他们了，可以修改评论吗？</font><br>A：为了保证公平性，迈界平台上一切的评论都是不可修改的，但是可以追加。因此请你在评论之前尽可能客观、真实的进行评论。<br><br><font color="#9DC14F">Q3：为什么看不到我的评价？</font><br>A：为了防范非法信息，评价需要审核。如果你的评价中含非法、广告、恶意、人身攻击等内容，将依法被禁止展示。<br><br><font color="#9DC14F">Q4：为啥我发不出评价？</font><br>A：有几种可能。第一，请检查你的手机网络是否畅通；第二，如果你之前曾有因为违规评论的屏蔽，满了三次以后你将在三个月内无法再进行评论。<font>]]><Data></Data></item>
-        <item>亲爱的迈友，请在这里直接填写你遇到的问题或意见建议，你的意见对迈界非常重要，是我们一直致力于开发体验感最强平台的动力。收到反馈以后，我们会尽快回复你。</item>
+        
+        <item><Data><![CDATA[<font color="#9DC14F">Q1：迈界的添加银行卡是个啥概念？有安全风险么？</font><br>]]></Data>
+            A：主人大大放心啦！我们可不需要您提供银行卡号、身份证号、安全码等等的敏感信息。基本上您只要知道现有银行卡的卡种名称和卡片模样，您就能一步添加啦~操作巨简单，不同卡之间也是一步切换，当即就呈现这张卡可享受的全部活动信息哟~求夸赞，我们会更能干哒~\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q2： 怎么就是找不到我的这张卡呢？没办法进行添加？</font><br>]]></Data>
+            A：哎呦，虽然这种情况的概率很低，但保不准有百密一疏的时候，对于给主人大大造成的麻烦，我们这就认真面壁思过！碰到这种情况，主人大大请毫不犹豫地找“小秘书”啦，小秘书一定会尽快给出解决方案。或者您也可以在“我的”“服务中心”进行“意见反馈”，我们一定开足马力飞快处理！\n
+          
+        	<Data><![CDATA[<br><br><font color="#9DC14F">Q3： 银行所有的活动都完整呈现在平台了么？</font><br>]]></Data>
+            A：不仅仅是银行的所有活动哦，还有visa、银联等发卡组织的活动，以及迈界为您搜罗的活动。而且所有活动都和商户确认过哦，您要找活动啊，看迈界就足够啦~再告诉您一个小技巧，运用“智能排序”中的“银行卡优先”，就可以优先看到银行和发卡组织的活动哦，往往这些活动需要直接使用这张卡前去消费哦，要注意相关的活动规则呢。\n
+        	
+        	<Data><![CDATA[<br><br><font color="#9DC14F">Q4： 为哈隔壁小红有的那个活动，我却灭有呢？</font><br>]]></Data>
+            A：这就是迈界的一大特点之一，每张银行卡都有自己对应的活动，招行的和浦发的肯定不一样啦，就算是同一家银行，金卡和无限卡也是不一样的，所以可以确定隔壁小红和您持有的银行卡不同哦~这其实也有好处，多比较比较，您就能明确哪个银行的哪张卡最适合您需要啦！优质卡还是鸡肋卡，拉出来遛一遛嘛~\n
+        	
+        	<Data><![CDATA[<br><br><font color="#9DC14F">Q5： 怎样进一步了解感兴趣的银行卡呀？</font><br>]]></Data>
+            A：一般来说在您关注的银行卡列表点击卡样图片，就能看到关于这张卡的“卡片简介”、“办理条件”、“收费标准”、“基本服务”，切换此卡为当前卡后，即可看到对应可享受的所有活动信息，如有问题需要进一步咨询，就赶紧找“小秘书”啦，可在“办卡推荐”板块指派任务。\n</item>
+        
+        
+        <item><Data><![CDATA[<font color="#9DC14F">Q1：惊喜活动是怎么个惊喜法呀？  </font><br>]]></Data>\n
+            A：迈界可是非常实在的哦~首先说说银行卡活动，您以后不用费时费力翻看各个银行官网、关注各家微博、微信，有迈界在手，那些热门活动、优质活动、还有被藏起来的好活动全部都第一时间一键掌握，够惊喜吧~\n
+                                   除此以外，热门商圈的品牌活动也是即刻知晓哟，看得见摸得着的正品消费，怎能放过？！\n还有还有~迈界逐步开放的海外板块也是太值得期待啦，现在先卖个关子，等您来发现哦~\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q2：怎样搜索一个活动？</font><br>]]></Data>\n
+			A：如果您有明确的目标品牌就很好办啦，首页的正中间用搜索栏直接搜索该品牌，可以查到这个品牌的门店目前正在进行的活动哦，会根据您地理位置的远近依次排列，如果您有认准的门店，推荐关注该店哦，这样一旦有新活动，您就能第一时间收到消息啦！\n
+			当然，如果您是想随便逛逛，也可以运用关键字搜索，或灵活使用我们每个板块的门类筛选，这样就会显示目标地区5km范围内正在进行的活动哦~\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q3：银行的优惠活动我可不想白白浪费，可以优先显示么？ </font><br>]]></Data>\n
+			A：当然没问题啦~进入到任何板块，您善用“智能排序”中的“银行卡优先”，就能优先显示您银行卡本身相关的活动啦~\n
+          
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q4：为啥我找不到XX店？ </font><br>]]></Data>\n
+			A：有几种可能。第一，您所找的商户目前没有正在进行中的活动；第二，您所找的商户暂不符合迈界对于上线商户的标准，要知道，迈界对商户的品质把关可是牢牢的呢；第三，您所找的商户因为违规操作而进入到黑名单；第四，您的定位可能与该商户不在同一城市。\n
+			如以上情况都不是，您可以通过意见反馈（链接）与我们联系\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q5： 我最喜欢XX家了，怎么才能及时收到他们的消息呢？ </font><br>]]></Data>\n
+			A：首先选择您最喜欢的那XX家，然后在门店详情页右上角点击关注，并且选择接收该门店的消息。之后只要这个门店有新活动发布，您就可以个人中心自动收到该门店活动的消息，绝不错过店家为您准备的惊喜哟~\n
+			
+			<Data><![CDATA[<br><br><font color="#9DC14F">Q6：如果商户脑袋被门夹了，欺骗消费者咋办？ </font><br>]]></Data>\n
+			A：憋担心！我们立马叫人开揍！（开玩笑）嘿嘿，大家都是斯文人，还是要冷静的处理。您可以在迈界对该商户进行举报或者投诉，若商户在3天内不予以回应或者该事情最终没有解决得当，您可以向我们进行反馈。迈界始终作为第三方，监督商户与迈友双方的行为，在核查清楚事实以后，咱肯定得召唤个容嬷嬷来处理。与此同时，也建议您可以通过评论给予其他消费者警示，避免再有人遭受损失。</item>
+       
+       
+        <item><Data><![CDATA[<font color="#9DC14F">Q1： 啥是惊喜？ </font><br>]]></Data>
+            A：迈界小秘书团队是一群无所不知、极具服务精神与热情、颜值也颇高的人类，专长就是根据您提出的需求，挖掘、筛选、对比、整合信息及渠道，为您提供最佳解决问题的方案。
+				您有任何需求，只要不违法，交给迈界小秘书，分分钟全搞定：\u2022 哪个渠道订机票最优惠？来问小秘书\n\u2022目的地适合亲子度假的酒店，哪个性价比最高？来问小秘书\n\u2022哪里能买到限量版的XXX ？来问小秘书\u2022想要了解A 家、B 家、C 家摆婚宴什么行情、服务及价格？来问小秘书\u2022学潜水/马术/搏击/礼仪/滑翔翼/直升机……都有哪些正规渠道？来问小秘书\u2022市面上做英国留学的机构，哪些是官方认证的？来问小秘书\u2022瑞士移民有哪些方式和条件？来问小秘书
+
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q2：咋个使用？</font><br>]]></Data>
+            A：神简单！首先您进入“私人秘书”板块，然后选择问题所属类型，填写相应表单并指派任务，相应板块的小秘书就会开启暴风处理模式，正常工作日2小时内就有回复哦，可以在“我的”板块“我的私人秘书”中查看相关的回复。如果小秘书发现您的提问难度系数较高，
+              2小时无法保证给您满意答复，那么小秘书也会第一时间告知您预计可以回复的时间。我们对您可绝不敷衍呢~试过一次，您就会上瘾哦~\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q3：听坊间传言有很高大上的方式与小秘书沟通需求呀？</font><br>]]></Data>
+            A：嗯~此言不假~关键在于善用“语音录入”功能，很多迈友觉得说话比打字方便得多呢，因此喜欢用语音录入（普通话哟~）的方式与小秘书对接需求。当您将需求描述得越清楚详细，小秘书的回复越能满足您的需求点。\n
+            
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q4：使用私人秘书有什么好处？</font><br>]]></Data>
+            A：为啥大老板、高官、社会精英都要配备秘书呢？用过您就知道拉~迈界为您服务的秘书可不止一位哟~精明的您心照不宣哦~\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q5：小秘书都不睡觉的吗？啥时候都能找你们唠唠嗑？</font><br>]]></Data>
+            A：介个…小秘书虽然是江湖百晓生般的存在，但毕竟不是神仙嘛，目前我们的服务时间：周一至周五工作日9:00-18:00（周末及法定节假日休息的哦），所以非工作时间收到的来件，我们会在开工后立即处理的，要麻烦您耐心等待！但但但，小秘书将逐步实现7*24无休服务，为亲爱滴您随时待命！\n
+           
+            <Data><![CDATA[<br><br><font color="#9DC14F">Q6： 私人秘书是完全免费的吗？ </font><br>]]></Data>
+            A：App端信息类是完全免费的哦~但如果您需要深度定制服务，比如为您定制自由行的整体行程攻略，或者需要策划一场婚宴活动，那我们建议您可以登录迈界的桌面端www.qmyo.com进行相关私人定制，一般会收取百元以内的计划费用。</item>
+       
+      
+        <item><Data><![CDATA[<font color="#9DC14F">Q1：为什么说注册的好处多多哒？</font><br>
+            A：完成注册后就可以自由添加自己已拥有的、或者感兴趣的银行卡啦~何止一大拨的惊喜活动向您袭来哟！而且可以收藏自己喜欢的活动、喜欢的商户，还享有迈界给予您的各种特权~更能使用小秘书功能哟~对自己人，迈界可以倾尽所有地对您好、宠您爱您不嫌多呢~\n
+           
+            <br><br><font color="#9DC14F">Q2：完善个人信息能得到什么好处？</font><br>
+            A：在“我的”板块点击个人头像就进入到了“个人信息”，强烈推荐“完善个人资料”哟~会有更多的惊喜源源不绝找上您哦！例如免费吃吃米其林美食或者国际新品的优先试用等等。]]></Data></item>
+       
+        
+        <item>在“我的”板块“服务中心”里有专门的“意见反馈”通道，可以就活动意见、商家投诉、银行卡问题反馈、技术问题反馈、其他反馈，提交您相应的内容。\n
+				亲爱的迈友，您有任何的意见建议都欢迎及时向我们反馈，这对迈界非常重要，是我们一直以来致力于开发体验感最强平台的动力。收到反馈以后，我们会尽快回复你。\n</item>
+    
     </string-array>
 
     <string name="user_protocol">用户协议</string>
